Fixed issue horizontal scrolling issue on very small screens (phones)

--- a/css/generic.css
+++ b/css/generic.css
@@ -371,6 +371,14 @@ h3{
     }
 }
 
+@media (max-width: 370px) {
+    #contentContainer{
+        margin-left: 0;
+        padding-left: 0;
+    }
+
+}
+
 @keyframes animateShadows {
     0% { text-shadow: 2px 0px 0px rgba(150, 50, 150, 1), -4px 0px 2px rgba(150, 50, 50, 1), 0px 4px 2px rgba(50, 50, 150, 1);   }
     20%{ text-shadow: -2px 2px 0px rgba(150, 50, 150, 1), 1px 0px 0px rgba(150, 50, 50, 1), 0px -4px 0px rgba(50, 50, 150, 1);  }
